--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    Superblog <span>El blog mas penca</span>
+    Superblog : <span>El blog mas penca</span>
     <h1>Título del Blog</h1>
     <p>Contenido del sitio web, este contenido contiene mucho texto para variar y es muy explicativo jejeje</p>
 </body>
