Se añadio mucho CSS y se añadio un poco de contenido

--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,17 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SuperBlog</title>
 </head>
 <body>
-    Superblog : <span>El blog mas penca</span>
-    <h1>Título del Blog</h1>
-    <p>Contenido del sitio web, este contenido contiene mucho texto para variar y es muy explicativo jejeje</p>
+   <div id="container"> 
+          <div id="cabecera">   
+               Superblog : <span id="tagline">El blog mas penca</span>
+          </div>
+             <div id="post">
+                <h1>Título del Blog</h1>
+                <p>Contenido del sitio web, este contenido contiene mucho texto para variar y es muy explicativo jejeje</p>
+             </div>   
+  </div>
 </body>
 </html>
