--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
           </div>
              <div id="post">
                 <h1>Título del Blog</h1>
-                <p>Contenido del sitio web, este contenido contiene mucho texto para variar y es muy explicativo jejeje</p>
+                <p>Contenido del sitio web, este contenido contiene mucho texto para variar y es muy explicativo jojojo</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste minus, nesciunt quidem fugit provident saepe dignissimos ea pariatur culpa ut perferendis eveniet corrupti atque architecto neque rerum, in, consequatur totam?.  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae iste ab ad aspernatur magni tempora repudiandae nobis recusandae atque perspiciatis.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus debitis, voluptate esse maxime, praesentium ea iusto nulla itaque cupiditate facilis tempora in nam obcaecati sint commodi? Deleniti minus asperiores veniam. Asperiores sed praesentium temporibus omnis amet magni, accusamus labore itaque. Ratione eligendi aut sed aspernatur hic unde autem, alias distinctio!</p><br>
                 <p><em><strong>Todo esto es por practica y no debería ser tomado en serio, y por ende nadie lo debería ver</strong></em></p>
